--- a/1/1_1/1_1_4/1_1_4_2/index.html
+++ b/1/1_1/1_1_4/1_1_4_2/index.html
@@ -8,11 +8,10 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <form name="fob">
-        전체 선택해제<input type="button" onclick="uncheckAll(document.fob.aaa)"/>
-        <input type="checkbox" name="aaa"/>
-        <input type="checkbox" name="aaa"/>
-        <input type="checkbox" name="aaa"/>
-    </form>
+    <input type="checkbox" name="box" value="1" onclick="send()"> 1번 </input>
+    <input type="checkbox" name="box" value="2" onclick="send()"> 2번 </input>
+    <input type="checkbox" name="box" value="3" onclick="send()"> 3번 </input>
+    <input type="checkbox" name="box" value="4" onclick="send()"> 4번 </input>
+    <button name="box" onclick="send()"> 확인 </button>
 </body>
 </html>
